--- a/FastAblationNew.vcxproj.filters
+++ b/FastAblationNew.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\StageControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MetalMesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\DAQControl.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\cbw.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MetalMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
