--- a/FastAblationNew.vcxproj.filters
+++ b/FastAblationNew.vcxproj.filters
@@ -38,9 +38,6 @@
     <ClInclude Include="src\DAQControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\GalvoControl.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\LaserControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -56,6 +53,21 @@
     <ClInclude Include="MetalMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\CHRocodileLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CHRocodileLibErrorDef.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CHRocodileLibPluginDef.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CHRocodileLibSpecialFunc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GalvoControl.h">
+      <Filter>Resource Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="lib\ACSCL_x64.LIB">
@@ -70,5 +82,19 @@
     <Library Include="lib\cbw64.lib">
       <Filter>Resource Files</Filter>
     </Library>
+    <Library Include="lib\x64\CHRocodile.lib">
+      <Filter>Resource Files</Filter>
+    </Library>
+    <Library Include="lib\Win32\CHRocodile.lib">
+      <Filter>Resource Files</Filter>
+    </Library>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="lib\x64\CHRocodile.dll">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="lib\Win32\CHRocodile.dll">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
